 ══════════
   Main App (v3.1.0.0)
   September 24th, 2019
 ══════════
  • UPDATED: Massive overhaul of the web request response and exception handling.
  • FIXED: Required updates message for actions app.  Even after pressing Done.
  • UPDATED: Optimized and reduced the amount of repetitive web calls.
  • UPDATED: Converted most async commands back to synchronous calls for speed.
  • FIXED: Notifications device support
  • UPDATED: Notices for upcoming SMS support removal from Hubitat and SmartThings (UK) platforms.
  • FIXED: Device test fixes.
  • ADDED: Duplicate existing Actions. (ST only at the moment)
  • ADDED: Support for actions guard triggers.
  • UPDATED: log output cleanups.

 ══════════
   Actions App (v3.1.0.0)
   September 24th, 2019
 ══════════
  • ADDED: Guard Trigger events.
  • ADDED: Control switches (on/off) when executing action.
  • FIXED: notification capable device support.
  • FIXED: Alexa Mobile notifications should now work.
  • FIXED: Action test would not run on new incomplete actions.
  • ADDED: Support for Duplicating existing Actions.
  • UPDATED: Notices for upcoming SMS support removal from Hubitat and SmartThings (UK) platforms.

 ══════════
   Device (v3.1.0.0)
   September 24th, 2019
 ══════════
  • ADDED: Follow up Auto Reset Queue (xx seconds) after last speech command.  Adjust each device under the devices setting page. Default is 180 sec.
  • UPDATED: Massive overhaul of the web request response and exception handling.
  • UPDATED: Converted most async commands back to synchronous calls for speed.
  • UPDATED: log output cleanups.
  • FIXED: Minor bug fixes.